--- a/LunghezzaFocale/main.tex
+++ b/LunghezzaFocale/main.tex
@@ -11,7 +11,7 @@
 	\section{Premesse teoriche}
 	Una lente è un dispositivo ottico in grado di far concentrare o disperdere i raggi luminosi. \\
 	\noindent Una lente divergente è un tipo di lente che, per l'appunto, fa divergere i raggi luminosi che la attraversano, facendo in modo che questi provengano da un punto dietro la lente stessa: siccome forma esclusivamente \emph{immagini virtuali} necessitiamo di una lente convergente con un potere diottrico maggiore in modulo rispetto a quello delle lente divergente. \\
-	Per calcolare la lunghezza focale della lente divergente si utilizza l'equazione del costruttore di lenti (nel caso di lenti sottili), che risulta essere
+	Per calcolare la lunghezza focale della lente divergente si utilizza la legge dei punti coniugati (nel caso di lenti sottili), che risulta essere
 	\begin{equation}
 		\frac{1}{p} + \frac{1}{q} = \frac{1}{f}
 		\label{lens_maker}	
