--- a/LunghezzaFocale/main.tex
+++ b/LunghezzaFocale/main.tex
@@ -40,11 +40,11 @@
 	Come spiegato nelle premesse teoriche, per misurare la lunghezza focale necessitiamo di una lente convergente: per questo ho considerato una lente con potere diottrico di $+xx$ e abbiamo spostato lo schermo per mettere a fuoco l'immagine sullo schermo. A quel punto abbiamo posto la lente divergente fra lo schermo e la lente convergente e abbiamo misurato la distanza arbitraria $p$ fra lo schermo e la lente. Successivamente abbiamo spostato lo schermo in modo da rimettere a fuoco l'immagine e abbiamo misurato la distanza $q$ fra lo schermo e la lente. Iterando questo procedimento, abbiamo effettuato in totale $x$ misurazioni. \\
 	Come incertezza non abbiamo utilizzato la risoluzione dello strumento siccome non conoscevamo bene la posizione del centro della lente e non si riusciva a trovare il punto esatto di messa a fuoco, ma solamente un intervallo in cui l'immagine sullo schermo risultava essere a fuoco; dunque abbiamo deciso di utilizzare un'incertezza di misura pari a $0.5 \, \si{\centi\meter}$
 	\section{Analisi dei dati}
-	I dati non soddisfano la condizione $\frac{1}{\hat{p}} \gg \frac{\sigma_q}{q^2}$ dunque non possiamo trascurare il termine $\frac{1}{p}$. Linearizziamo la ~(\ref{lens_maker}) ponendo $x = \frac{1}{q}$ e $y=\frac{1}{p}$ e si ottiene
+	I dati non soddisfano la condizione $\frac{1}{\hat{p}} \ll \frac{\sigma_q}{q^2}$ dunque non possiamo trascurare il termine $\frac{1}{p}$. Linearizziamo la ~(\ref{lens_maker}) ponendo $x = \frac{1}{q}$ e $y=\frac{1}{p}$ e si ottiene
 	$$
 		y = mx + \frac{1}{f}
 	$$
-	e possiamo dunque effettuare un fit utilizzando come modello teorico una semplice retta che ha $m$ come coefficiente angolare e $\frac{1}{f}$ come intercetta con l'asse y. Tuttavia si osserva che gli errori sulle $y$ non sono trascurabili e quindi abbiamo utilizzato gli errori efficaci. \\
+	e possiamo dunque effettuare un fit utilizzando come modello teorico una semplice retta che ha $m$ come coefficiente angolare e $\frac{1}{f}$ come intercetta con l'asse y. Tuttavia si osserva che gli errori sugli $x_i$ non sono trascurabili e quindi abbiamo utilizzato gli errori efficaci. \\
 	Riporto il grafico del fit \\
 	
 	Per valutare l'accordo fra il modello e i dati abbiamo calcolato il $\chi^2$ utilizzando sempre gli errori efficaci:
